# Minecraft-wasm-runtime

./: .gitignore  .vsls.json  README.md  build.gradle  buildRust.bat  buildRust.sh  gradle.properties
minecraft-wasm-runtime-stdlib/: Cargo.toml
minecraft-wasm-runtime-stdlib/src/: lib.rs
src/main/Wasmtime-embedding/: Cargo.toml
src/main/Wasmtime-embedding/src/: InstanceData.rs  LanguageTrait.rs  errors.rs  interop.rs  interoperable_val.rs  java_interface.rs  lib.rs  module.rs  utils.rs  wasmOptions.rs  wasm_interop.rs
src/main/Wasmtime-embedding/src/Languages/: AssemblyScript.rs  Unknown.rs  mod.rs
src/main/java/wasmruntime/: AutoReload.java  AutoReloader.java  FuncType.java  ModuleImports.java  ModuleWrapper.java  Modules.java  WasmRuntime.java
src/main/java/wasmruntime/CarpetStuff/: Extension.java  ModuleValue.java
src/main/java/wasmruntime/Commands/: Invoke.java  Load.java
src/main/java/wasmruntime/Enums/: WasmType.java
src/main/java/wasmruntime/Errors/: Trap.java  TrapRuntime.java  WasmParseError.java  WasmValidationError.java
src/main/java/wasmruntime/Exceptions/: WasmtimeEmbeddingException.java  WasmtimeException.java
src/main/java/wasmruntime/Imports/: Import.java  Printing.java
src/main/java/wasmruntime/ModuleData/: BlockType.java  Code.java  Data.java  Element.java  Export.java  Expression.java  FunctionType.java  Global.java  ImportedFunction.java  Limit.java  (+7 more)
src/main/resources/: fabric.mod.json
src/main/resources/Wasmtime-embedding/: Cargo.toml
src/main/resources/Wasmtime-embedding/src/: errors.rs  interop.rs  lib.rs  wasmOptions.rs
(+110 files in other folders)
