[package]
name = "Wasmtime-embedding"
version = "0.1.0"
authors = ["Xendergo <not@my.email>"]
edition = "2018"

[lib]
crate_type = ["cdylib"]

[dependencies]
jni = "0.19.0"
wasmtime = "0.25.0"
wasmtime-wasi = "0.25.0"
wasi-common = "0.25.0"
thiserror = "1.0.20"
anyhow = "1.0.31"
wasi-cap-std-sync = "0.25.0"
lazy_static = "1.4.0"
byteorder = "1.4.3"

[profile.dev]
opt-level = 0
panic = "unwind"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'